core/external-secrets/netpols.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.wynning.tech/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: external-secrets-namespace-policy
  namespace: external-secrets
spec:
  endpointSelector: {}
  ingress:
    # Allow intra-namespace traffic (pod-to-pod within external-secrets)
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": external-secrets

    # Allow ingress from prometheus
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            # This label must exist on the namespace object itself
            "k8s:io.kubernetes.pod.namespace": monitoring

  egress:
    # Allow intra-namespace traffic
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": external-secrets

    # Allow DNS
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
---
# yaml-language-server: $schema=https://k8s-schemas.wynning.tech/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: bitwarden-world-policy
  namespace: external-secrets
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: bitwarden-sdk-server

  egress:
    # Allow internet egress
    - toEntities:
        - world
